Update PackageService.java