@@ -4,36 +4,35 @@ import it.unicam.cs.ids.filieraagricola.model.Product;
 import it.unicam.cs.ids.filieraagricola.model.ProductPackage;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
- * Service responsible for managing product packages in the agricultural supply chain.
+ * Service responsible for managing product packages (bundles).
  *
- * <p>This service applies defensive copying using the Prototype pattern: every Product
- * stored internally is a copy created via {@code Product.clone()} to avoid accidental
- * external mutations. Public collections returned by this service are unmodifiable.</p>
- *
- * <p>All public and important private methods are documented in English.</p>
+ * <p>All stored and returned packages/products are handled through defensive
+ * copying (cloning). Public lists are produced using {@code Stream.toList()}
+ * and are therefore effectively unmodifiable for external callers.</p>
  */
 public class PackageService {
 
     private final List<ProductPackage> packageList;
 
     /**
-     * Constructs a new PackageService with an empty package list.
+     * Constructs a new PackageService instance.
      */
     public PackageService() {
         this.packageList = new ArrayList<>();
     }
 
     /**
-     * Creates a new product package and adds it to the managed collection.
-     * Each product is defensively copied before being stored.
+     * Creates a new product package and stores it internally.
      *
-     * @param packageName the name of the package, must not be null or empty
-     * @param products    the list of products to include in the package (must not be null)
-     * @return the created ProductPackage instance (internal instance, do not modify)
-     * @throws IllegalArgumentException if packageName is invalid or products is null
+     * <p>The method clones provided products and stores a new internal {@link ProductPackage}.
+     * The returned value is a clone of the stored package (so callers never get the internal instance).</p>
+     *
+     * @param packageName package name (must not be null or empty)
+     * @param products    products to include (must not be null)
+     * @return clone of the created ProductPackage
+     * @throws IllegalArgumentException if inputs are invalid
      */
     public ProductPackage createPackage(String packageName, List<Product> products) {
         validatePackageName(packageName);
@@ -41,69 +40,84 @@ public class PackageService {
 
         var packageItem = buildPackage(packageName, products);
         packageList.add(packageItem);
-        return packageItem;
+        return packageItem.clone();
     }
 
     /**
-     * Returns an unmodifiable view of the packages managed by this service.
-     * The returned list is a read-only view of the internal collection.
+     * Returns an unmodifiable list of packages (each element is a clone).
      *
-     * @return unmodifiable list of ProductPackage
+     * <p>Each package in the returned list is a defensive copy to avoid exposing
+     * internal mutable state.</p>
+     *
+     * @return list of product package clones (effectively unmodifiable)
      */
     public List<ProductPackage> getPackageList() {
-        return Collections.unmodifiableList(packageList);
+        return packageList.stream()
+                .map(ProductPackage::clone)
+                .toList();
     }
 
     /**
-     * Finds packages by name using case-insensitive matching.
+     * Finds packages whose name contains the provided search term (case-insensitive).
      *
-     * @param name the name to search for
-     * @return a list of packages matching the given name; empty list if name is null/empty
+     * <p>Returned list contains clones of the matching packages (defensive copies).</p>
+     *
+     * @param name search term (may not be null/empty)
+     * @return list of matching package clones (empty list if none)
      */
     public List<ProductPackage> findPackagesByName(String name) {
         if (name == null || name.trim().isEmpty()) {
             return Collections.emptyList();
         }
 
+        String norm = name.toLowerCase().trim();
         return packageList.stream()
-                .filter(packageItem -> matchesName(packageItem, name))
-                .collect(Collectors.toList());
+                .filter(p -> p.getName().toLowerCase().contains(norm))
+                .map(ProductPackage::clone)
+                .toList();
     }
 
     /**
-     * Removes a package from the managed collection.
+     * Removes the specified package from the internal storage.
      *
-     * @param packageItem the package to remove
-     * @return true if the package was removed, false otherwise
+     * @param packageItem package to remove (must not be null)
+     * @return {@code true} if removed, {@code false} otherwise
+     * @throws IllegalArgumentException if packageItem is null
      */
     public boolean removePackage(ProductPackage packageItem) {
+        if (packageItem == null) throw new IllegalArgumentException("PackageItem cannot be null");
         return packageList.remove(packageItem);
     }
 
     /**
-     * Updates an existing package with a new product list.
-     * The supplied products are defensively copied and set into the managed package.
+     * Updates the products of an existing managed package.
      *
-     * @param packageItem the package to update (must be already managed by this service)
+     * <p>The provided product list is defensively copied (each product is cloned)
+     * and then set on the managed package instance.</p>
+     *
+     * @param packageItem the package to update (must already be managed)
      * @param newProducts the new list of products (must not be null)
-     * @throws IllegalArgumentException if package is not managed by this service or newProducts is null
+     * @throws IllegalArgumentException if package not managed or newProducts is null
      */
     public void updatePackage(ProductPackage packageItem, List<Product> newProducts) {
         validateManagedPackage(packageItem);
         validateProductList(newProducts);
 
-        // Defensive copy of each Product using Prototype
         List<Product> copied = newProducts.stream()
                 .map(Product::clone)
-                .collect(Collectors.toList());
+                .toList();
 
-        packageItem.setProducts(copied);
+        int idx = packageList.indexOf(packageItem);
+        ProductPackage managed = packageList.get(idx);
+        managed.setProducts(copied);
     }
 
+    /* ----------------- private helpers ----------------- */
+
     /**
-     * Validates that the package name is not null or empty.
+     * Validates the package name.
      *
-     * @param name package name candidate
+     * @param name candidate package name
      * @throws IllegalArgumentException if name is null or empty
      */
     private void validatePackageName(String name) {
@@ -113,53 +127,37 @@ public class PackageService {
     }
 
     /**
-     * Validates that the product list is not null.
+     * Validates the product list argument.
      *
-     * @param products product list candidate
+     * @param products candidate product list
      * @throws IllegalArgumentException if products is null
      */
     private void validateProductList(List<Product> products) {
-        if (products == null) {
-            throw new IllegalArgumentException("Product list cannot be null");
-        }
+        if (products == null) throw new IllegalArgumentException("Product list cannot be null");
     }
 
     /**
-     * Builds a new ProductPackage. Products passed to the package are defensively copied
-     * using the {@code Product.copy()} method to avoid sharing mutable references.
+     * Builds a new ProductPackage instance by defensively copying the provided products.
      *
      * @param name     package name
      * @param products source products (not null)
-     * @return a new ProductPackage instance containing copies of the provided products
+     * @return a new ProductPackage instance containing clones of the provided products
      */
     private ProductPackage buildPackage(String name, List<Product> products) {
         List<Product> copies = products.stream()
                 .map(Product::clone)
-                .collect(Collectors.toList());
+                .toList();
         return new ProductPackage(name, copies);
-    }
-
-    /**
-     * Checks if a package matches the given name (case-insensitive).
-     *
-     * @param packageItem the package to check
-     * @param name        the search name
-     * @return true if the package name contains the search term (case-insensitive)
-     */
-    private boolean matchesName(ProductPackage packageItem, String name) {
-        return packageItem.getName()
-                .toLowerCase()
-                .contains(name.toLowerCase().trim());
     }
 
     /**
      * Validates that the package is managed by this service.
      *
      * @param packageItem candidate package
-     * @throws IllegalArgumentException if the package is not present in the managed collection
+     * @throws IllegalArgumentException if the package is null or not present in the managed collection
      */
     private void validateManagedPackage(ProductPackage packageItem) {
-        if (!packageList.contains(packageItem)) {
+        if (packageItem == null || !packageList.contains(packageItem)) {
             throw new IllegalArgumentException("Package is not managed by this service");
         }
     }
